Proyecto_v3_0/Proyecto_v3_0.sdk/.metadata/.plugins/org.eclipse.cdt.ui/standalone_bsp_0_xaxivdma_example_intr_1.build.log
17:01:45 **** Auto Build of configuration Debug for project standalone_bsp_0_xaxivdma_example_intr_1 ****
make all 
'Building file: ../src/xaxivdma_example_intr.c'
'Invoking: ARM gcc compiler'
arm-xilinx-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xaxivdma_example_intr.o" -I../../standalone_bsp_0/ps7_cortexa9_0/include -MMD -MP -MF"src/xaxivdma_example_intr.d" -MT"src/xaxivdma_example_intr.d" -o "src/xaxivdma_example_intr.o" "../src/xaxivdma_example_intr.c"
../src/xaxivdma_example_intr.c:122:2: warning: #warning CHECK FOR THE VALID DDR ADDRESS IN XPARAMETERS.H, DEFAULT SET TO 0x01000000 [-Wcpp]
 #warning CHECK FOR THE VALID DDR ADDRESS IN XPARAMETERS.H, \
  ^
../src/xaxivdma_example_intr.c: In function 'main':
../src/xaxivdma_example_intr.c:106:23: error: 'XPAR_FABRIC_AXIVDMA_0_MM2S_INTROUT_VEC_ID' undeclared (first use in this function)
 #define READ_INTR_ID  XPAR_FABRIC_AXIVDMA_0_MM2S_INTROUT_VEC_ID
                       ^
../src/xaxivdma_example_intr.c:418:37: note: in expansion of macro 'READ_INTR_ID'
  Status = SetupIntrSystem(&AxiVdma, READ_INTR_ID, WRITE_INTR_ID);
                                     ^
../src/xaxivdma_example_intr.c:106:23: note: each undeclared identifier is reported only once for each function it appears in
 #define READ_INTR_ID  XPAR_FABRIC_AXIVDMA_0_MM2S_INTROUT_VEC_ID
                       ^
../src/xaxivdma_example_intr.c:418:37: note: in expansion of macro 'READ_INTR_ID'
  Status = SetupIntrSystem(&AxiVdma, READ_INTR_ID, WRITE_INTR_ID);
                                     ^
../src/xaxivdma_example_intr.c:105:24: error: 'XPAR_FABRIC_AXIVDMA_0_S2MM_INTROUT_VEC_ID' undeclared (first use in this function)
 #define WRITE_INTR_ID  XPAR_FABRIC_AXIVDMA_0_S2MM_INTROUT_VEC_ID
                        ^
../src/xaxivdma_example_intr.c:418:51: note: in expansion of macro 'WRITE_INTR_ID'
  Status = SetupIntrSystem(&AxiVdma, READ_INTR_ID, WRITE_INTR_ID);
                                                   ^
make: *** [src/xaxivdma_example_intr.o] Error 1

17:01:46 Build Finished (took 460ms)

